--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/fotos/fundadores_1962_2.jpg);
+    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/fotos/pedro/sub10_11_2_banner.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
